<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="reset_button_text">Reset Game</string>
    <string name="todo">TODO</string>
    <string name="player_1_0">Player 1: 0</string>
    <string name="player_2_0">Player 2: 0</string>
    <string name="reset">reset</string>
    <string name="cell_0_0">Cell 0,0</string>
    <string name="cell_0_1">Cell 0,1</string>
    <string name="cell_0_2">Cell 0,2</string>
    <string name="welcome_message">Welcome to My App!</string>
    <string name="start_button">Get Started</string>
    <string name="logo_description">App Logo</string>

</resources>