<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_background"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_message"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="30dp"
        android:text="Developed BY : Dhani Bux Lashari"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/start_button"
        android:textSize="18sp"
        android:textColor="@android:color/white" />

</RelativeLayout>
