<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD700"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFD700">

        <TextView
            android:id="@+id/text_view_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFD700"
            android:text="@string/player_1_0"
            android:textColor="#171616"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/text_view_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_p1"
            android:background="#FFD700"
            android:text="@string/player_2_0"
            android:textColor="#171616"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="33dp"
            android:background="#673AB7"
            android:text="@string/reset"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFD700"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="197dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="@string/cell_0_0"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,NestedWeights,VisualLintButtonSize" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#FFD700" />

        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp"
            android:layout_height="197dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="@string/cell_0_1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#FFD700" />

        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp"
            android:layout_height="201dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="@string/cell_0_2"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFD700">

        <Button
            android:id="@+id/button_10"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="Cell 1,0"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights,VisualLintButtonSize" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#FFD700" />

        <Button
            android:id="@+id/button_11"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="Cell 1,1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,HardcodedText,VisualLintButtonSize" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#FFD700" />

        <Button
            android:id="@+id/button_12"
            android:layout_width="0dp"
            android:layout_height="198dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="Cell 1,2"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,HardcodedText,VisualLintButtonSize" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFD700">

        <Button
            android:id="@+id/button_20"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="Cell 2,0"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights,VisualLintButtonSize" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#FFD700" />

        <Button
            android:id="@+id/button_21"
            android:layout_width="0dp"
            android:layout_height="198dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="Cell 2,1"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,HardcodedText,VisualLintButtonSize" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#FFD700" />

        <Button
            android:id="@+id/button_22"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:contentDescription="Cell 2,2"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,HardcodedText,VisualLintButtonSize" />

    </LinearLayout>


</LinearLayout>
